BPOR/BPOR.Rms/wwwroot/css/nihr-ui.css
html {
    scroll-padding-top: 4rem;
}

body {
    margin: 0;
    padding: 0;
    min-height: 100vh;
    position: relative;
    color: #193E72;
}

.govuk-width-container {
    max-width: 1500px;
}

@media (min-width:801px) and (max-width:1600px) {
    .govuk-width-container {
        max-width: 1500px;
        margin-left: 60px;
    }
}

.govuk-header {
    background-color: #193e72;
    border-color: #ced5db;
    border-bottom-width: 1px;
    flex-direction: row;
    display: flex;
}

.govuk-header__container {
    padding-top: 0;
    border-bottom-width: 0;
    height: 65px;
    justify-content: space-between;
    display: flex;
    max-width: 1500px;
    width: 100%;
    margin: 0 auto; /* Centers the container */
}

.header-content-container {
    justify-content: space-between;
    display: flex;
    flex-direction: row;
    width: 100%;
}

.header-content-left {
    position: relative;
    display: flex;
    align-items: center;
}

.header-content-right {
    justify-content: center;
    align-items: center;
    display: flex;
}

    .header-content-right .govuk-header__logotype {
        gap: 10px;
        align-items: center;
        display: flex;
    }

.button-container {
    display: flex;
    height: 3rem;
    width: 3rem;
    align-items: center;
    justify-content: center;
}

.icon-container {
    width: 3rem;
    height: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    cursor: pointer;
    outline: none;
    position: relative; /* For the circle focus */
}

    .icon-container:focus::before {
        content: '';
        position: absolute;
        height: 3rem;
        width: 3rem;
        border-radius: 50%;
        border: 2px solid white;
        background-color: #305280;
    }

.line {
    width: 18px;
    height: 2px;
    background-color: black;
    transition: transform 0.3s ease, opacity 0.5s ease;
    border-radius: 3px;
    z-index: 1;
}

/* Adjusted transformations for the arrow state */
.icon-container.clicked .line1 {
    transform: translateX(-5px) translateY(2px) rotate(-45deg);
    width: 10px;
}

.icon-container.clicked .line3 {
    transform: translateX(-5px) translateY(-2px) rotate(45deg);
    width: 10px;
}

.nihr-button-primary {
    background-color: #193e72;
    color: white;
    border: 1px solid #193e72;
    border-radius: 5px;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    cursor: pointer;
    display: inline-block;
    text-align: center;
    text-decoration: none;
    transition: background-color 0.3s ease;
}

    .nihr-button-primary:hover {
        background-color: #305280;
    }

.nihr-button-secondary {
    background-color: white;
    color: #193e72;
    border-radius: 5px;
    border: 2px solid #193E72;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    cursor: pointer;
    display: inline-block;
    text-align: center;
    text-decoration: none;
    transition: background-color 0.3s ease;
}

    .nihr-button-secondary:hover {
        background-color: #f2f2f2;
    }

.nihr-flex-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    border: 1px solid #193e72;
    padding: 20px;
    border-radius: 5px;
}

.vl {
    border-left: 1px solid #193e72;
    height: 100%;
}

.split-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

    .split-row > * {
        align-self: center;
    }

.settings-cog {
    position: relative;
    display: inline-block;
}

.settings-dropdown {
    position: absolute;
    right: 0;
    background-color: #fff;
    min-width: 160px;
    z-index: 1;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
}

    .settings-dropdown a {
        color: black;
        padding: 12px 16px;
        text-decoration: none;
        display: block;
    }

        .settings-dropdown a:hover {
            background-color: #ddd;
        }

/* pagination.css */
.pagination-container {
    width: 100%;
    height: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
    display: inline-flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}

.pagination-item {
    background: white;
    display: inline-flex;
    justify-content: flex-start;
    align-items: center;
    gap: 15px;
}

.pagination-label {
    padding: 10px 15px;
    background: #193E72;
    color: white;
    font-size: 19px;
    font-weight: 700;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px -1px 0px white inset;
}

.pagination-dots {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
}

.dot {
    width: 3px;
    height: 3px;
    background: #505A5F;
    border-radius: 9999px;
}

.govuk-back-link-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 15px;
}

.float-content-right {
    float: right;
}

.govuk-link.sign-out-nav__link,
.govuk-link.sign-out-nav__link:visited {
    color: #fff;
    text-decoration: none;
}

    .govuk-link.sign-out-nav__link:hover {
        text-decoration: underline;
    }

        .govuk-link.sign-out-nav__link:hover:visited {
            color: #fff;
            text-decoration: underline;
        }

    .govuk-link.sign-out-nav__link:focus {
        color: #193e72;
    }

.govuk-header__logotype.nihr-logo {
    /* Align with text base-line */
    margin-top: 5px;
}

.post-code {
    white-space: nowrap;
}

.pill-container {
    gap: 10px;
    padding-bottom: 10px;
}

    .pill-container.pill-container-column {
        flex-direction: column;
    }

.pill {
    padding-top: 1px;
    padding-left: 10px;
    padding-right: 10px;
    background: #EEF2F3;
    border-radius: 10px;
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
    display: inline-flex;
    color: #193E72;
    font-size: 14px;
    font-weight: 700;
    line-height: 24px;
    word-wrap: break-word;
}

@media screen and (max-width: 768px) {
    .pill-container {
        width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .pill {
        flex-basis: calc(50% - 10px);
        text-align: center;
        margin-bottom: 10px;
        justify-content: center;
    }
}

@media screen and (min-width: 769px) {

    .pill-container {
        flex-direction: row;
        display: inline-flex;
        justify-content: flex-start;
        align-items: flex-start;
    }
}

@media screen and (min-width: 641px) {
    .right-align-buttons-desktop {
        display: flex;
        justify-content: flex-end;
    }
}

.govuk-skip-link.start-of-options {
    margin-bottom: 5px !important;
}

.govuk-skip-link.end-of-options {
    margin-top: 5px !important;
}

.govuk-skip-link.options-list {
    margin-bottom: 5px !important;
}

.govuk-checkboxes__item.skip-link {
    margin-bottom: unset;
}

.email-address {
    font-weight: bold;
}

button.govuk-back-link {
    border: none;
    background: none;
}

